--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     </head>
         <body>
             <!-- relative path  -->
-             <a href="Father.html">
+             <h1>My Lovely Mother </h1>
+             <a href="Father.html"> 
                 <h1>My Father Page  </h1>
              </a>
+             <h1> My Lovely Father </h1>
              <a href="Mother.html">
                 <h1> My Mother Page </h1>
              </a>          
