--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
              <h1> My Lovely Father </h1>
              <a href="Mother.html">
                 <h1> My Mother Page </h1>
-             </a>          
+             </a>         
+             <a href="complete-form.html">
+               <h1> Complete Form </h1>
+             </a> 
 </body>
 </html>
