--- a/Father.html
+++ b/Father.html
@@ -1,12 +1,21 @@
 <html>
 
 <head>
+    <style>
+        body{
+            background-image:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUqHgwwVgYcnSZjrqwkzkRTlAoJq37YP9fzw&s) ;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size:cover ;
+        }
+    </style>
     <title> My Father </title>
 </head>
 
 <h1>
     <center>Inormation Of Father</center>
 </h1>
+<hr>
 <ol>
     <li>Favourite Dish </li>
     <ul>
