--- a/Mother.html
+++ b/Mother.html
@@ -1,9 +1,18 @@
 <html>
     <head> 
+        <style>
+            body{
+                background-image:url(https://i.ytimg.com/vi/WdJjSuyzVMw/maxresdefault.jpg) ;
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size:cover ;
+            }
+        </style>
         <title>My Mother  </title>
     </head>
     <body>
             <h1><center>Inormation Of Mother </center></h1>
+            <hr>
         <ol>
             <li>Favourite Dish </li>
             <ul>
@@ -47,13 +56,13 @@
         <li> My Mother teaches good Manner and to Respect Other. </li>
         <li> My Mother  Plays badmintion with me.</li>
         <li> My Mother take care of entire Family.</li>
-         <li> She is Loving and Handsome.</li>
+         <li> She has loving nature.</li>
          <li> I love my Mother too much and she is the best mom in the world.</li>
         </ol>
         <hr>
         <h3>A Pillar Of Strength</h3>
         <p> My Mother is my Guiding light,a pillar of strength who has always stood by me through thick and thin. Her wisdom and kindness Inspire me.</p>
         <h3> Unconditional love </h3>
-        <p> she loves without conditions and supports without Hesitation. Her love is safe harbor where I find comfort and Courage to Face Life,s Situation. </p>
+        <p> She loves without conditions and supports without Hesitation. Her love is safe harbor where I find comfort and Courage to Face Life,s Situation. </p>
     </body>
 </html>
