--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <html> 
     <head> 
+   <style>
+      body{
+         background-image:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHoUR6K79tWIOrjE6_p9QIQyIM4mvECuS-Qg&s) ;
+         background-repeat: no-repeat;
+         background-attachment: fixed;
+         background-size: cover;
+      }
+   </style>
          <title> Home Page </title>
     </head>
         <body>
+         <h1> HELLO! <br> My Name Is <br> <i>Parth Anup Patil </i><br>I am the Student of Mount Carmel Convent school, Katol
+            <br> I am in <mark>9th</mark> Standard
+        </h1>
+        <h2>  These are my Mother, Father and Form Web Pages</h2>
             <!-- relative path  -->
              <a href="Father.html"> 
                 <h1>My Father  </h1>
