--- a/complete-form.html
+++ b/complete-form.html
@@ -1,6 +1,14 @@
 <html>
 
 <head>
+    <style>
+        body{
+            background-image:url(https://cdn.pixabay.com/photo/2017/04/05/04/44/background-2203989_1280.jpg) ;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+    </style>
     <title>Complete Form </title>
 </head>
 
