--- a/registration-form.html
+++ b/registration-form.html
@@ -2,7 +2,7 @@
     <head>
         <style>
             body{
-            background-image:url();
+            background-image:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiSCM5znP4BN-qYh9hszoLzM13cjjGOoy8AQ&s);
             background-repeat: no-repeat;
             background-attachment: scroll;
             background-size: cover; 
@@ -11,7 +11,7 @@
         <title> Registration form</title>
     </head>
     <body>
-        <h1> Registration Form</h1>
+        <h1>   Registration Form </h1>
         <hr>
         <form> 
             <label>  Email Id:</label>
