--- a/input-class.html
+++ b/input-class.html
@@ -44,8 +44,12 @@
             <input type="password" placeholder="Enter your Password">
             <br>
             <br>
+            <label>Upload File</label>
+            <input type="file"name="file">
+            <br>
+            <br>
             <input type="submit" value="Submit">
-            <input type="reset" value="Reset">  
+            <input type="reset" value="Reset"> 
         </form>
     </body>
 </html>
