--- a/table-tag/table.html
+++ b/table-tag/table.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>.....</title>
+        <title>Table tag </title>
     </head>
     <body>
         <table border="2">
@@ -12,9 +12,9 @@
              <th style="background-color: red;">Monday </th> 
              <th style="background-color: greenyellow;">Tuesday</th> 
              <th>Wednesday</th> 
-             <th>Thursday </th> 
+             <th>Thursday</th>
              <th>Friday </th> 
-             <th>Saturday </th>   
+             <th>Saturday </th>  
              </tr>
              <!-- row 1 -->
              <tr>
