--- a/index.html
+++ b/index.html
@@ -1,29 +1,58 @@
-<html> 
-    <head> 
+<html>
+
+<head>
    <style>
-      body{
-         background-image:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHoUR6K79tWIOrjE6_p9QIQyIM4mvECuS-Qg&s) ;
+      body {
+         background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHoUR6K79tWIOrjE6_p9QIQyIM4mvECuS-Qg&s);
          background-repeat: no-repeat;
          background-attachment: fixed;
          background-size: cover;
       }
+      .header{
+         background-color:#03A791;
+            font-size: 40px;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            color: #BEE4D0;
+            text-align: center;
+      }
+      h2 {
+         text-align: center;
+         font-size: 40px;
+         font-family: cursive;
+      }
+
+      li {
+         color: #6F826A;
+      }
    </style>
-         <title> Home Page </title>
-    </head>
-        <body>
-         <h1> HELLO! <br> My Name Is <br> <i>Parth Anup Patil </i><br>I am the Student of Mount Carmel Convent school, Katol
-            <br> I am in <mark>9th</mark> Standard
-        </h1>
-        <h2>  These are my Mother, Father and Form Web Pages</h2>
-            <!-- relative path  -->
-             <a href="Father.html"> 
-                <h1>My Father  </h1>
-             </a>
-             <a href="Mother.html">
-                <h1> My Mother</h1>
-             </a>         
-             <a href="complete-form.html">
-               <h1> Complete Form </h1>
-             </a> 
+   <title> Home Page </title>
+</head>
+
+<body>
+   <div class="header">
+      <h1> HELLO! <br> My Name Is <i>Parth Patil </i><br>I am the Student of Mount Carmel Convent school, Katol
+         <br> I am in 9th Standard
+      </h1>
+   </div>
+   <h2>This are my all web Pages</h2>
+   <ul>
+      <!-- relative path  -->
+      <li>
+         <a href="Father.html">
+            <h1>My Father </h1>
+         </a>
+      </li>
+      <li>
+         <a href="Mother.html">
+            <h1> My Mother</h1>
+         </a>
+      </li>
+      <li>
+         <a href="complete-form.html">
+            <h1> Complete Form </h1>
+         </a>
+      </li>
+   </ul>
 </body>
+
 </html>
