--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
          background-attachment: fixed;
          background-size: cover;
       }
-      .header{
-         background-color:#03A791;
-            font-size: 40px;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            color: #BEE4D0;
-            text-align: center;
+
+      .header {
+         background-color: #03A791;
+         font-size: 40px;
+         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+         color: #BEE4D0;
+         text-align: center;
       }
+
       h2 {
          text-align: center;
          font-size: 40px;
@@ -39,7 +41,7 @@
       <!-- relative path  -->
       <li>
          <a href="Father.html">
-            <h1>My Father </h1>
+            <h1 class="1">My Father </h1>
          </a>
       </li>
       <li>
@@ -50,6 +52,76 @@
       <li>
          <a href="complete-form.html">
             <h1> Complete Form </h1>
+         </a>
+      </li>
+      <li>
+         <a href="admission-form.html">
+            <h1> Admisssion Form</h1>
+         </a>
+      </li>
+      <li>
+         <a href="class-two.html">
+            <h1>Class Two in HTML </h1>
+         </a>
+      </li>
+      <li>
+         <a href="complete-form-tag.html">
+            <h1> Form Tag in HTML</h1>
+         </a>
+      </li>
+      <li>
+         <a href="favourite-technology.html">
+            <h1>Favourite Technology</h1>
+         </a>
+      </li>
+      <li>
+         <a href="form-2.html">
+            <h1>Form 2 in HTML</h1>
+         </a>
+      </li>
+      <li>
+         <a href="form.html">
+            <h1> Form in HTML</h1>
+         </a>
+      </li>
+      <li>
+         <a href="hobbies.html">
+            <h1>Hobbies </h1>
+         </a>
+      </li>
+      <li>
+         <a href="image-tag.html">
+            <h1> Image in HTML</h1>
+         </a>
+      </li>
+      <li>
+         <a href="input-class.html">
+            <h1> Input class </h1>
+         </a>
+      </li>
+      <li>
+         <a href="list-tag.html">
+            <h1> List Tag </h1>
+         </a>
+      </li>
+      <li>
+         <a href="registration-form.html">
+            <h1>Registration Form</h1>
+         </a>
+      </li>
+      <li>
+         <a href="tech-hobby.html">
+            <h1> Tech-Hobby </h1>
+         </a>
+      </li>
+      <li>
+         <a href="topmovies.html">
+            <h1>Top Movies    </h1>
+         </a>
+      </li>
+      <li>
+         <a href="assignment.html">
+            <h1>Assignment in HTML</h1>
          </a>
       </li>
    </ul>
