--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       li {
          color: #6F826A;
       }
+
+      .box-1 {
+         font-size: 40px;
+         text-align: center;
+         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      }
    </style>
    <title> Home Page </title>
 </head>
@@ -116,12 +122,166 @@
       </li>
       <li>
          <a href="topmovies.html">
-            <h1>Top Movies    </h1>
+            <h1>Top Movies </h1>
          </a>
       </li>
       <li>
-         <a href="assignment.html">
-            <h1>Assignment in HTML</h1>
+         <a href="fingerprint.html">
+            <h1>Information about Fingerprint</h1>
+         </a>
+      </li>
+      <li>
+         <a href="fan.html">
+            <h1>Information About Fan</h1>
+         </a>
+      </li>
+      <div class="box-1"><span>CSS Folder</span></div>
+      <!-- CSS Folder -->
+      <li>
+         <a href="./CSS/assignment.html">
+            <h1>Assignment </h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/box-model.html">
+            <h1>Box Model</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/box-modeling.html">
+            <h1>Box modeling </h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/css-class-one.html">
+            <h1>CSS Class One</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/css-class-two.html">
+            <h1>CSS Class two</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/css-class-three.html">
+            <h1>CSS Class Three</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/css-class-four.html">
+            <h1>CSS Class Four</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/css-class-five.html">
+            <h1>CSS Class Five</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/css-class-six.html">
+            <h1>CSS Class six</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/padding.html">
+            <h1>Padding</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/superhero.html">
+            <h1>Superhero</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/flag.html">
+            <h1>Flag in HTML</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/css-class-selector.html">
+            <h1> CSS Class Selector </h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/css-class-selector-two.html">
+            <h1>CSS Class Selector Two</h1>
+         </a>
+      </li>
+      <div class="box-1"><span>Table Tag Folder</span></div>
+      <!-- Table Folder -->
+      <li>
+         <a href="./table-tag/table-class-one.html">
+            <h1>Table Class One </h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/table.html">
+            <h1>Table in HTML</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/calender.html">
+            <h1> Calender</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/colspan-table.html">
+            <h1>Colspan in table</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/colspan-cw.html">
+            <h1> Colspan Class Work </h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/colspan-hw-one.html">
+            <h1> Colspan Home Work One </h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/colspan-hw-two.html">
+            <h1>Colspan Home Work Two </h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/colsapan-hw-three.html">
+            <h1>Colspan Home Work Three </h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/time-table.html">
+            <h1> Time Table in Table </h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/table-web-layout.html">
+            <h1> Table Web Layout</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/rowspan.html">
+            <h1>Rowspan in HTML</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/ex-colspan-rowspan-CW.html">
+            <h1> Example of Colspan and Rowspan in Class</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/report-card.html">
+            <h1> Report Card</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/assignment-table.html">
+            <h1>Assignment One in Table </h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/assignment-table-two.html">
+            <h1>Assignment Two in Table </h1>
          </a>
       </li>
    </ul>
