--- a/table-tag/report-card.html
+++ b/table-tag/report-card.html
@@ -22,6 +22,18 @@
             text-align: center;
             font-family: cursive;
         }
+        .box-1{
+          background-color:#90D1CA ;
+        }
+        .box-2{
+            background-color:#309898;
+        }
+        .box-3{
+            background-color:#6FE6FC;
+        }
+        .box-4{
+            background-color:#9B7EBD ;
+        }
     </style>
 </head>
 
@@ -32,61 +44,61 @@
         <table>
             <!-- Row one  -->
             <tr>
-                <td>Sr.no.</td>
-                <td>Subject</td>
-                <td>Out of </td>
-                <td>Marks </td>
+                <td class="box-1">Sr.no.</td>
+                <td class="box-2">Subject</td>
+                <td class="box-3">Out of </td>
+                <td class="box-4">Marks </td>
             </tr>
             <!-- Row two  -->
             <tr>
-                <td>1.</td>
-                <td>English</td>
-                <td>100</td>
-                <td>89</td>
+                <td class="box-1">1.</td>
+                <td class="box-2">English</td>
+                <td class="box-3"> 100</td>
+                <td class="box-4">89</td>
             </tr>
             <!-- Row three  -->
             <tr>
-                <td>2.</td>
-                <td>Maths</td>
-                <td>100</td>
-                <td>68</td>
+                <td class="box-1" >2.</td>
+                <td class="box-2">Maths</td>
+                <td class="box-3">100</td>
+                <td class="box-4">68</td>
             </tr>
             <!-- Row four  -->
             <tr>
-                <td>3.</td>
-                <td>Science </td>
-                <td>100</td>
-                <td>79</td>
+                <td class="box-1">3.</td>
+                <td class="box-2">Science </td>
+                <td class="box-3">100</td>
+                <td class="box-4">79</td>
             </tr>
             <!-- Row five  -->
             <tr>
-                <td>4.</td>
-                <td>Marathi</td>
-                <td>100</td>
-                <td>74</td>
+                <td class="box-1">4.</td>
+                <td class="box-2">Marathi</td>
+                <td class="box-3">100</td>
+                <td class="box-4">74</td>
             </tr>
             <!-- Row six  -->
             <tr>
-                <td>5.</td>
-                <td>History</td>
-                <td>100</td>
-                <td>81</td>
+                <td class="box-1">5.</td>
+                <td class="box-2">History</td>
+                <td class="box-3">100</td>
+                <td class="box-4">81</td>
             </tr>
             <!-- Row seven  -->
             <tr>
-                <td>6.</td>
-                <td>Computer</td>
-                <td>100</td>
-                <td>96</td>
+                <td class="box-1">6.</td>
+                <td class="box-2">Computer</td>
+                <td class="box-3">100</td>
+                <td class="box-4">96</td>
             </tr>
             <!-- Row eight -->
             <tr>
-                <td colspan="3">Total</td>
-                <td>487</td>
+                <td colspan="3" style="background-color:#73946B ;">Total</td>
+                <td style="background-color:#A4B465 ;">487</td>
             </tr>
             <!-- Row nine  -->
             <tr>
-                <td colspan="4">Percentage:81.16</td>
+                <td colspan="4" style="background-color:#948979 ;">Percentage:81.16</td>
             </tr>
         </table>
     </div>
