--- a/index.html
+++ b/index.html
@@ -163,23 +163,18 @@
          </a>
       </li>
       <li>
-         <a href="./CSS/css-class-three.html">
+         <a href="./CSS/css-three.html">
             <h1>CSS Class Three</h1>
          </a>
       </li>
       <li>
          <a href="./CSS/css-class-four.html">
-            <h1>CSS Class Four</h1>
+            <h1>CSS Class Four </h1>
          </a>
       </li>
       <li>
          <a href="./CSS/css-class-five.html">
-            <h1>CSS Class Five</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/css-class-six.html">
-            <h1>CSS Class six</h1>
+            <h1>CSS Class Five </h1>
          </a>
       </li>
       <li>
@@ -205,6 +200,26 @@
       <li>
          <a href="./CSS/css-class-selector-two.html">
             <h1>CSS Class Selector Two</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/flex-layout-web.html">
+            <h1>Flex Layout Web</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/flex-wrap-ex.html">
+            <h1> Flex Wrap Example</h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/product-gallery.html">
+            <h1>Product Gallery </h1>
+         </a>
+      </li>
+      <li>
+         <a href="./CSS/product-card.html">
+            <h1>Product Card</h1>
          </a>
       </li>
       <div class="box-1"><span>Table Tag Folder</span></div>
@@ -282,6 +297,11 @@
       <li>
          <a href="./table-tag/assignment-table-two.html">
             <h1>Assignment Two in Table </h1>
+         </a>
+      </li>
+      <li>
+         <a href="./table-tag/image-gallery.html">
+            <h1>Image Gallery</h1>
          </a>
       </li>
    </ul>
