--- a/table-tag/image-gallery.html
+++ b/table-tag/image-gallery.html
@@ -24,6 +24,7 @@
 
 <body>
     <table>
+        <caption style="font-size: 50px;">Flower Gallery</caption>
         <tr>
             <td><img src="https://www.farmersstop.com/cdn/shop/files/33334016770131_933x700.jpg?v=1744445244"
                     width="100%">
