--- a/CSS/css-class-five.html
+++ b/CSS/css-class-five.html
@@ -1,74 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="english">
 
 <head>
-    <title>Css Class Five </title>
+    <!-- Google fonts link -->
+    <title> CSS Class six landing page </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <style>
-        .First-class {
-            height: 500px;
-            background-color: rgb(6, 169, 244);
-            text-align: center;
-            color: #213448;
-            font-size: 30px;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        }
-
-        .second-class {
-            height: 500px;
+        .main-container {
             width: 100%;
-            background-color: #F79B72;
-            text-align: center
+            height: 800px;
+            background-color: #3D365C;
         }
 
-        .Third-class {
-            height: 500px;
+        .head {
             width: 100%;
-            background-color: #B6B09F;
-            text-align: center;
-            color: #213448;
-            font-size: 50px;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-
-        }
-
-        .Fourth-class {
             height: 200px;
-            width: 100%;
-            background-color: #3729cb;
-            color: #ffffff;
-            font-size: 30px;
-            font-family: cursive;
+            background-image: url('../assets/banner.jpeg');
+            background-size: cover;
+            background-repeat: no-repeat;
             text-align: center;
+            color: #81E7AF;
+            font-size: 50px;
+            font-weight: 700;
+            /* Google font used */
+            font-family: "Oswald", sans-serif;
+            font-optical-sizing: auto;
+            font-style: normal;
         }
     </style>
 </head>
 
 <body>
-    <img src="https://static.vecteezy.com/system/resources/previews/049/855/296/non_2x/nature-background-high-resolution-wallpaper-for-a-serene-and-stunning-view-photo.jpg"
-        height="300px" width="100%">
-
-    <!-- Div One -->
-
-    <div class="First-class">
-        <span>My Enhanced Website</span>
-    </div>
-    <!-- Div Two -->
-    <div class="second-class">
-        <span>
-            <a href="">
-                Home About project Contact
-        </span></a>
-        <!-- Div Three -->
-    </div>
-    <!-- Div Four -->
-    <div class="Third-class">
-        <span>My Project</span>
-    </div>
-    <!-- Div Five -->
-    <div class="Fourth-class">
-        <span>My Enhanced Footer</span>
-    </div>
+    <main class="main-container">
+        <div class="head">
+            <br>
+            <span> My landing Page </span>
+        </div>
+    </main>
 </body>
 
 </html>
