--- a/NEW_PARTH/INDEX-PAGE/index.html
+++ b/NEW_PARTH/INDEX-PAGE/index.html
@@ -1,310 +1,297 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-   <style>
-      body {
-         background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHoUR6K79tWIOrjE6_p9QIQyIM4mvECuS-Qg&s);
-         background-repeat: no-repeat;
-         background-attachment: fixed;
-         background-size: cover;
-      }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index Page </title>
+    <style>
+        html {
+            scroll-padding-top: 60px;
+            scroll-behavior: smooth;
+        }
 
-      .header {
-         background-color: #03A791;
-         font-size: 40px;
-         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-         color: #BEE4D0;
-         text-align: center;
-      }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-      h2 {
-         text-align: center;
-         font-size: 40px;
-         font-family: cursive;
-      }
+        body {
+            width: 100vw;
+            height: 100vh;
+            padding: 0;
+            margin: 0;
+            scroll-behavior: smooth;
+        }
 
-      li {
-         color: #6F826A;
-      }
+        .main-container {
+            width: 100%;
+            height: 100%;
+            background-color: #272727;
 
-      .box-1 {
-         font-size: 40px;
-         text-align: center;
-         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      }
-   </style>
-   <title> Home Page </title>
+        }
+
+        /* Home Section Start */
+        .header {
+            width: 100%;
+            background-color: #272727;
+            display: flex;
+            position: fixed;
+        }
+
+        .head-one {
+            width: 50%;
+            height: 60px;
+            background-color: #272727;
+        }
+
+        .portfolio {
+            color: white;
+            font-size: 24px;
+            margin-left: 120px;
+
+        }
+
+        .head-two {
+            width: 50%;
+            height: 60px;
+            margin-left: 200px;
+            background-color: #272727;
+            display: flex;
+            gap: 60px;
+
+        }
+
+        .home {
+            color: white;
+            background-color: antiquewhite;
+            font-size: 24px;
+            margin-top: 20px;
+            background-color: transparent;
+        }
+
+        .nav-bar-home {
+            width: 100%;
+            height: 2%;
+
+        }
+
+        .nav-bar-home:hover {
+            color: #5DB996;
+            text-decoration-line: underline;
+
+        }
+
+        a .nav-bar-home:active {
+            text-decoration: underline;
+        }
+
+        .home-section {
+            width: 100%;
+            height: 100vh;
+            display: flex;
+        }
+
+        .home-section-one {
+            width: 50%;
+            height: 100%;
+            background-color: #272727;
+            margin-top: 17%;
+        }
+
+        .home-section-two {
+            width: 50%;
+            height: 100%;
+           
+        }
+
+        .hello {
+            color: white;
+            font-size: 30px;
+            margin-left: 110px;
+        }
+
+        .name {
+            color: white;
+            font-size: 50px;
+            margin-left: 110px;
+        }
+
+        .full {
+            color: white;
+            font-size: 40px;
+            margin-left: 110px;
+        }
+
+        .section {
+            color: #5DB996;
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+        }
+
+        /* Home Section end */
+        /* About Section Start */
+        .maincontainer {
+            width: 100%;
+            height: 100%;
+            background-color: #272727;
+        }
+
+        .section-1 {
+            width: 100%;
+            height: 100%;
+            display: flex;
+        }
+
+        .sec-one {
+            width: 40%;
+            height: 90%;
+            background-color: #272727;
+        }
+
+        .image-2 {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+            margin-left: 15%;
+        }
+
+        img {
+            height: 100%;
+        }
+
+        .sec-two {
+            width: 60%;
+            height: 100%;
+            background-color: #272727;
+        }
+
+        .about {
+            width: 100%;
+            height: 20%;
+            text-align: center;
+            font-size: 60px;
+            font-family: cursive;
+            font-weight: 700;
+            padding-top: 30px;
+            margin-top: 30px;
+            background-color: #272727;
+            color: white;
+        }
+
+        .sec-two-name {
+            text-align: center;
+            margin-right: 20%;
+        }
+
+        .sec-two-main-name {
+            font-size: 40px;
+            color: white;
+            font-weight: 900;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        }
+
+        .sec-two-second-name {
+            font-size: 40px;
+            color: #5DB996;
+            font-weight: 900;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        }
+
+        .sec-two-info {
+            text-align: center;
+            font-size: 30px;
+            color: #57B4BA;
+        }
+
+        .h-one {
+            text-align: center;
+            color: white;
+            font-size: 35px;
+        }
+
+        .span-one {
+            color: #5DB996;
+            font-size: 35px;
+        }
+    </style>
 </head>
 
 <body>
-   <div class="header">
-      <h1> HELLO! <br> My Name Is <i>Parth Patil </i><br>I am the Student of Mount Carmel Convent school, Katol
-         <br> I am in 9th Standard
-      </h1>
-   </div>
-   <h2>This are my all web Pages</h2>
-   <ul>
-      <!-- relative path  -->
-      <li>
-         <a href="Father.html">
-            <h1 class="1">My Father </h1>
-         </a>
-      </li>
-      <li>
-         <a href="Mother.html">
-            <h1> My Mother</h1>
-         </a>
-      </li>
-      <li>
-         <a href="complete-form.html">
-            <h1> Complete Form </h1>
-         </a>
-      </li>
-      <li>
-         <a href="admission-form.html">
-            <h1> Admisssion Form</h1>
-         </a>
-      </li>
-      <li>
-         <a href="class-two.html">
-            <h1>Class Two in HTML </h1>
-         </a>
-      </li>
-      <li>
-         <a href="complete-form-tag.html">
-            <h1> Form Tag in HTML</h1>
-         </a>
-      </li>
-      <li>
-         <a href="favourite-technology.html">
-            <h1>Favourite Technology</h1>
-         </a>
-      </li>
-      <li>
-         <a href="form-2.html">
-            <h1>Form 2 in HTML</h1>
-         </a>
-      </li>
-      <li>
-         <a href="form.html">
-            <h1> Form in HTML</h1>
-         </a>
-      </li>
-      <li>
-         <a href="hobbies.html">
-            <h1>Hobbies </h1>
-         </a>
-      </li>
-      <li>
-         <a href="image-tag.html">
-            <h1> Image in HTML</h1>
-         </a>
-      </li>
-      <li>
-         <a href="input-class.html">
-            <h1> Input class </h1>
-         </a>
-      </li>
-      <li>
-         <a href="list-tag.html">
-            <h1> List Tag </h1>
-         </a>
-      </li>
-      <li>
-         <a href="registration-form.html">
-            <h1>Registration Form</h1>
-         </a>
-      </li>
-      <li>
-         <a href="tech-hobby.html">
-            <h1> Tech-Hobby </h1>
-         </a>
-      </li>
-      <li>
-         <a href="topmovies.html">
-            <h1>Top Movies </h1>
-         </a>
-      </li>
-      <li>
-         <a href="fingerprint.html">
-            <h1>Information about Fingerprint</h1>
-         </a>
-      </li>
-      <li>
-         <a href="fan.html">
-            <h1>Information About Fan</h1>
-         </a>
-      </li>
-      <div class="box-1"><span>CSS Folder</span></div>
-      <!-- CSS Folder -->
-      <li>
-         <a href="./CSS/assignment.html">
-            <h1>Assignment </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/box-model.html">
-            <h1>Box Model</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/box-modeling.html">
-            <h1>Box modeling </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/css-class-one.html">
-            <h1>CSS Class One</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/css-class-two.html">
-            <h1>CSS Class two</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/css-three.html">
-            <h1>CSS Class Three</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/css-class-four.html">
-            <h1>CSS Class Four </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/css-class-five.html">
-            <h1>CSS Class Five </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/padding.html">
-            <h1>Padding</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/superhero.html">
-            <h1>Superhero</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/flag.html">
-            <h1>Flag in HTML</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/css-class-selector.html">
-            <h1> CSS Class Selector </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/css-class-selector-two.html">
-            <h1>CSS Class Selector Two</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/flex-layout-web.html">
-            <h1>Flex Layout Web</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/flex-wrap-ex.html">
-            <h1> Flex Wrap Example</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/product-gallery.html">
-            <h1>Product Gallery </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./CSS/product-card.html">
-            <h1>Product Card</h1>
-         </a>
-      </li>
-      <div class="box-1"><span>Table Tag Folder</span></div>
-      <!-- Table Folder -->
-      <li>
-         <a href="./table-tag/table-class-one.html">
-            <h1>Table Class One </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/table.html">
-            <h1>Table in HTML</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/calender.html">
-            <h1> Calender</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/colspan-table.html">
-            <h1>Colspan in table</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/colspan-cw.html">
-            <h1> Colspan Class Work </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/colspan-hw-one.html">
-            <h1> Colspan Home Work One </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/colspan-hw-two.html">
-            <h1>Colspan Home Work Two </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/colsapan-hw-three.html">
-            <h1>Colspan Home Work Three </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/time-table.html">
-            <h1> Time Table in Table </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/table-web-layout.html">
-            <h1> Table Web Layout</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/rowspan.html">
-            <h1>Rowspan in HTML</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/ex-colspan-rowspan-CW.html">
-            <h1> Example of Colspan and Rowspan in Class</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/report-card.html">
-            <h1> Report Card</h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/assignment-table.html">
-            <h1>Assignment One in Table </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/assignment-table-two.html">
-            <h1>Assignment Two in Table </h1>
-         </a>
-      </li>
-      <li>
-         <a href="./table-tag/image-gallery.html">
-            <h1>Image Gallery</h1>
-         </a>
-      </li>
-   </ul>
+    <!-- Home Section Start -->
+    <div class="main-container">
+        <div class="header">
+            <div class="head-one">
+                <div style="margin-top: 20px;" class="portfolio">
+                    <span>Portfolio.</span>
+                </div>
+            </div>
+            <!-- This is head Navigation -->
+            <div class="head-two">
+                <div class="home">
+                    <a href="#" class="nav-bar-home"> Home </a>
+                </div>
+                <div class="home">
+                    <a href="#About" class="nav-bar-home">About</a>
+                </div>
+                <div class="home">
+                    <a href="#Project">Project</a>
+                </div>
+                <div class="home">
+                    <a href="#Contact">Contact</a>
+                </div>
+            </div>
+        </div>
+        <div class="home-section">
+            <div class="home-section-one">
+                <h1 class="hello">Hello It's Me</h1><br><br>
+                <h1 class="name"> Parth Patil</h1> <br> <br>
+                <h1 class="full"> And I'm <span class="section">Full Stack Developer </span> </h1> <br><br>
+        
+            </div>
+            <div class="home-section-two">
+                <div class="image-1">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+        <!-- Home Section End -->
+
+        <!-- About Section Start -->
+        <div class="about" id="About">
+            About Me
+        </div>
+        <div class="maincontainer">
+            <div class="section-1">
+                <div class="sec-one">
+                    <div class="image-2">
+                        <img
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQu17MJGAtBIRrc3VKEtmS7W3P1lNmllzxyYA&s">
+                    </div>
+                </div>
+                <div class="sec-two">
+                    <div class="sec-two-name">
+                        <span class="sec-two-main-name">Hi There!</span>
+                        <span class="sec-two-second-name">I am Parth</span>
+                    </div>
+                    <br><br>
+                    <h1 class="h-one"> I am a <span class="span-one">Full Stack Developer</span> </h1>
+                    <br><br>
+                    <div class="sec-two-info">
+                        I have experience working with technologies <br> like HTML and CSS.
+                        I enjoy building complete <br> web applications and continuously learning new <br> technologies
+                        to improve
+                        my skills.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
